--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,3 +1,5 @@
 spring:
   liquibase:
     change-log: classpath*:db/changelog/test-changelog.xml
+  datasource:
+    url: jdbc:h2:mem:test;DATABASE_TO_UPPER=false;CASE_INSENSITIVE_IDENTIFIERS=TRUE
